--- a/pushkinIndex.html
+++ b/pushkinIndex.html
@@ -9,6 +9,7 @@
     <script src="styles/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <!-- <link rel="stylesheet" href="./mainStyle.css"> -->
     <link rel="stylesheet" href="styles/mainStyle.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 </head>
 <body>
     <container>
