--- a/tests/testsIndex.html
+++ b/tests/testsIndex.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../styles/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../styles/mainStyle.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                   <p>Узнай, как жил сын дворянина во времена Крестьянской войны под предводительством Емельяна Пугачёва. Влюбись в прекрасную дочь капитана Марию Миронову и узри императрицу Екатерину во всей красе!</p>
                   <p>Участвуй в жизни героя: выбирай, что бы он сделал в той или иной ситуации. А мы расскажем, как оно было на самом
                       деле!</p>
-                  <button><a href="./grinevStory/grinevIndex.html" role="button">Поехали!</a></button>
+                  <a href="./grinevStory/grinevIndex.html">Поехали!</a>
                 </div>
             </div>    
 
@@ -39,7 +40,7 @@
                   <p>Отправляйся в поход на половцев, услышь плач прекрасной Ярославны и почувствуй дух древней Руси!</p>
                   <p>Участвуй в жизни героя: выбирай, что бы он сделал в той или иной ситуации. А мы расскажем, как оно было на самом
                       деле!</p>
-                      <button><a href="./igorStory/igorIndex.html" role="button">Поехали!</a></button>
+                  <a href="./igorStory/igorIndex.html" role="button">Поехали!</a>
                 </div>
             </div>
 
@@ -50,48 +51,12 @@
                         <p>Пройди с героем череду жизненных испытаний: узнай, как началась его любовь к Татьяне и почему он дрался на дуэли
                             с лучшим другом - Владимиром Ленским.</p>
                         <p>Участвуй в жизни героя: выбирай, что бы он сделал в той или иной ситуации. А мы расскажем, как оно было на самом
-                            деле!</p>            
-                    <button><a href="oneginStory/oneginIndex.html" role="button">Поехали!</a></button>
+                            деле!</p>         
+                    <a href="oneginStory/oneginIndex.html" role="button">Поехали!</a>
                 </div>
             </div>
 
-          </div>
-          <div id="myModal" class="modal fade">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h4>Ваше мнение важно для нас</h4>
-                </div>
-                <div class="modal-body">
-                  <p>Ваше мнение очень важно для нас. Сайт функционирует в тестовом режиме. Если вы обнаружили баги, опечатки или что-то другое не менее неприятное, пожалуйста, сообщите об этом!</p>
-                  <p>По любым интересующим вас вопросам обращайтесь по адресу ХХХ@mail.ru или в личку к администратору групп <a href="" style="color:black">вконтакте</a> и <a href=""  style="color:black">фейсбука</a></p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Всё понял!</button>
-                </div>
-              </div>
-            </div>
         </div>
-
-        <div id="myModal2" class="modal fade">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h4>Кто? Что? Зачем?</h4>
-                </div>
-                <div class="modal-body">
-                  <p>"Пушкин в VK" - это социальная сеть русских писателей. Главная цель проекта - вернуть обществу нежные чувства к русской словесности. К сожалению, проблема отсутствия интереса к чтению стоит в нашем мире слишком остро, чтобы её можно было игнорировать.</p>
-                  <p>Алгоритм приобщения к прекрасному очень прост: регистрируетесь, выбираете из списка авторов того, который нравится, заполняете маленькую формочку о нём (годы жизни, награды, всякое такое) и получаете доступ в личный кабинет.</p>
-                  <p>На странице вы можете постить тексты (цитаты, отрывки из произведений), любые картинки (фотки, инфографику - созданную вами или не вами). Также вы можете просматривать страницы других писателей, оставлять комментарии к их постам и, конечно же, ставить лайки.</p>
-                  <p>Всё, что вы постите на странице, попадает в раздел <a href="" style="color:black">"стена"</a>, на который, кстати, вы можете заглянуть и без регистрации.</p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Всё понял!</button>
-                </div>
-              </div>
-            </div>
-        </div>
-
     </container>    
 </body>
 </html>
