--- a/tests/igorStory/igorIndex.html
+++ b/tests/igorStory/igorIndex.html
@@ -1,4 +1,5 @@
 <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
     <link rel="stylesheet" href="../../styles/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../styles/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../styles/bootstrap-3.3.7-dist/css/bootstrap-theme.css">
