remove firefox bugs

--- a/tests/grinevStory/grinevIndex.html
+++ b/tests/grinevStory/grinevIndex.html
@@ -10,17 +10,8 @@
 
 <body class="grinevBody">
     <div id="mainDiv">
-        <!-- <section id="runStory">
-            <h1>Стань Петром Гринёвым!</h1>
-            <p>Узнай, как жил сын дворянина во времена Крестьянской войны под предводительством Емельяна Пугачёва. Влюбись в прекрасную дочь капитана Марию Миронову и узри императрицу Екатерину во всей красе!</p>
-            <p>Участвуй в жизни героя: выбирай, что бы он сделал в той или иной ситуации. А мы расскажем, как оно было на самом
-                деле!</p>
-            <button class="goStory1">
-                <a>Поехали!</a>
-            </button>
-        </section>
- -->
-        <button class="interruptTest"><a href="../testsIndex.html">х</a></button>
+
+        <a class="interruptTest" href="../testsIndex.html">х</a>
 
         <section id="story1">
             <p>Вас зовут Пётр Андреевич Гринёв. Вы - сын дворянина. Ещё до рождения вы были записаны для службы в Семёновский полк (Петербург). По достижении вами 16 лет, папенька решает, что вам пора отправиться на службу.</p>
