--- a/tests/igorStory/igorIndex.html
+++ b/tests/igorStory/igorIndex.html
@@ -10,16 +10,8 @@
 
 <body class="igorBody">
     <div id="mainDiv">
-        <!-- <section id="runStory">
-            <h1>Стань князем Игорем Святославичем!</h1>
-            <p>Отправляйся в поход на половцев, услышь плач прекрасной Ярославны и почувствуй дух древней Руси!</p>
-            <p>Участвуй в жизни героя: выбирай, что бы он сделал в той или иной ситуации. А мы расскажем, как оно было на самом
-                деле!</p>
-            <button class="goStory1">
-                <a>Поехали!</a>
-            </button>
-        </section> -->
-        <button class="interruptTest"><a href="../testsIndex.html">х</a></button>
+
+        <a class="interruptTest" href="../testsIndex.html">х</a>
 
         <section id="story1">
             <p>Вы - Игорь Святославич, собравший под свои знамёна князей Севера. В войске состоит также и дружина вашего брата Всеволода. Вместе вы отправляетесь в поход на половцев. События происходят в конце 12 века.</p>
