--- a/tests/oneginStory/oneginIndex.html
+++ b/tests/oneginStory/oneginIndex.html
@@ -1,5 +1,5 @@
 <head>
-                <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="../../styles/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../styles/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../styles/bootstrap-3.3.7-dist/css/bootstrap-theme.css">
@@ -10,17 +10,8 @@
     
 <body class="oneginBody">
     <div id="mainDiv">
-        <!-- <section id="runStory">
-            <h1>Стань Евгением Онегиным!</h1>
-            <p>Пройди с героем череду жизненных испытаний: узнай, как началась его любовь к Татьяне и почему он дрался на дуэли
-                с лучшим другом - Владимиром Ленским.</p>
-            <p>Участвуй в жизни героя: выбирай, что бы он сделал в той или иной ситуации. А мы расскажем, как оно было на самом
-                деле!</p>
-            <button class="goStory1">
-                <a>Поехали!</a>
-            </button>
-        </section> -->
-        <button class="interruptTest"><a href="../testsIndex.html">х</a></button>
+
+        <a class="interruptTest" href="../testsIndex.html">х</a>
 
         <section id="story1">
             <img class="img-responsive center-block center-block" src="images/evgenijOnegin1.jpg" alt="На картине изображены Евгений и Татьяна. Автор – Ю. Кушевский. Год написания – 2001">
